Fix base::nix::GetDesktopEnvironment for newer versions of Unity

This CL fixes some desktop integration issues on Ubuntu 17.04, where
XDG_CURRENT_DESKTOP has changed from 'Unity' to 'Unity:Unity7' (or
'Unity:Unity8' if you're of the Mir persuasion).

BUG=706317
R=thestig@chromium.org

Review-Url: https://codereview.chromium.org/2780863003
Cr-Commit-Position: refs/heads/master@{#460492}